Fixed bug where onChangeVisible wasn't getting all visible
Attempted to improve performance by downloading only references
For some reason, that is slower than full objects by 100%

--- a/client/src/pages/admin/pluggables/FlightContact.css
+++ b/client/src/pages/admin/pluggables/FlightContact.css
@@ -5,7 +5,7 @@
 }
 
 .flightcontactlist-phones p {
-	margin-top: -10px !important;
+	margin-top: 0px !important;
 }
 
 .flightcontactlist-item:nth-of-type(1) {
